# knowledge-assistant

./: .env.example  CONTRIBUTING.md  NOTICE  README.md  flowsettings.py  mkdocs.yml  pyproject.toml
.github/workflows/: auto-bump-and-release.yaml  ci.yml  lint-pr-title.yaml  unit-test.yaml
docs/: about.md  index.md  local_model.md
docs/architecture/: current-architecture.md  target-architecture.md
docs/development/: codebase-map.md  contributing.md  data-and-configuration.md  index.md  quality-and-risks.md  roadmap.md  runtime-flows.md
libs/kotaemon/: README.md  pyproject.toml
libs/kotaemon/kotaemon/indices/ingests/: files.py
libs/kotaemon/kotaemon/indices/qa/: citation_qa.py  citation_qa_inline.py
libs/ktem/: pyproject.toml
libs/ktem/ktem/: app.py  main.py
libs/ktem/ktem/assets/css/: main.css
libs/ktem/ktem/assets/js/: main.js
libs/ktem/ktem/assets/md/: changelogs.md
libs/ktem/ktem/index/file/: pipelines.py  ui.py
libs/ktem/ktem/pages/: help.py  login.py  settings.py
libs/ktem/ktem/pages/chat/: __init__.py  chat_panel.py  control.py
libs/ktem/ktem/reasoning/: simple.py
libs/ktem/ktem/utils/: __init__.py  conversation.py
libs/ktem/ktem_tests/: test_conversation.py  test_login.py  test_minimal_baseline.py
scripts/: run_linux.sh  run_macos.sh  run_windows.bat  update_linux.sh  update_macos.sh  update_windows.bat
templates/project-default/{{cookiecutter.project_name}}/: README.md
