# Modified by SwartzMss in 2026 for the Knowledge Assistant distribution.

[build-system]
requires = ["setuptools >= 61.0", "wheel", "setuptools-git-versioning>=2.0,<3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false
packages.find.include = []

[tool.setuptools-git-versioning]
enabled = true
dev_template = "{tag}"
dirty_template = "{tag}"
tag_filter = "v?\\d+(\\.\\d+)*.*"

[project]
name = "knowledge-assistant"
dynamic = ["version"]
requires-python = ">=3.10.14"
description = "A self-hosted knowledge assistant for working with documents."
dependencies = [
    "kotaemon",
    "ktem"
]
authors = [
    { name = "SwartzMss" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.uv.sources]
kotaemon = { workspace = true }
ktem = { workspace = true }

# uv workspace configuration
[tool.uv.workspace]
members = ["libs/kotaemon", "libs/ktem"]

[dependency-groups]
dev = [
    "black",
    "coverage",
    "flake8",
    "ipython",
    "pytest",
    "pytest-mock",
    "sphinx"
]
docs = [
    "mkdocs",
    "mkdocs-material",
]

[project.urls]
Homepage = "https://github.com/SwartzMss/knowledge-assistant"
Repository = "https://github.com/SwartzMss/knowledge-assistant"
Issues = "https://github.com/SwartzMss/knowledge-assistant/issues"

[tool.codespell]
skip = "*.js,*.css,*.map"
# `llm` abbreviation for large language models
ignore-words-list = "llm,fo"
quiet-level = 3
check-filenames = ""

[tool.isort]
known_first_party = ["kotaemon"]
